--- a/reflections/index.html
+++ b/reflections/index.html
@@ -17,7 +17,7 @@
   <!-- Global assets -->
   <link rel="stylesheet" href="/reflections/assets/reflections.css?v=12">
   <script src="/reflections/assets/audio-system.js?v=12"></script>
-  <link rel="manifest" href="/reflections/manifest.json">
+  <link rel="manifest" href="/reflections/manifest.json?v=2">
   <meta name="theme-color" content="#ff6b3d">
 </head>
 
