--- a/reflections/index.html
+++ b/reflections/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="/reflections/assets/reflections.css?v=12">
   <script src="/reflections/assets/audio-system.js?v=12"></script>
   <link rel="manifest" href="/reflections/manifest.json?v=2">
+  <link rel="apple-touch-icon" href="/reflections/icon-180.png">
   <meta name="theme-color" content="#ff6b3d">
 </head>
 
