--- a/reflections/pages/transcendence/read.html
+++ b/reflections/pages/transcendence/read.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- =========================================================
-       TRANSCENDENCE — Read Page (Standalone)
-       Author: Ninox Antolihao
-       Notes:
-       - Uses a clean, bookish dark theme.
-       - One audio player (stops if re-played).
-       - Mobile-friendly typography and spacing.
-       - Replace cover.jpg and transcendence.mp3 paths as needed.
-       ========================================================= -->
-  <meta charset="utf-8">
+   <!-- ========== META & HEAD ========== -->
+   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>TRANSCENDENCE — Unraveling the Enigma of Absolute Truth</title>
   <meta name="description" content="A clear, modern reflection on the journey from transcendence to Absolute Reality by Ninox Antolihao.">
   <meta name="author" content="Ninox Antolihao">
+  <link rel="icon" href="/reflections/assets/favicon.ico">
 
-  <!-- Open Graph for sharing -->
-  <meta property="og:type" content="article">
-  <meta property="og:title" content="TRANSCENDENCE — Unraveling the Enigma of Absolute Truth">
-  <meta property="og:description" content="The journey from transcendence to Absolute Reality — a reflection by Ninox Antolihao.">
-  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/transcendence/transcendence.png">
-  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/transcendence/read.html">
+  <!-- Social preview (keep as-is) -->
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/assets/logo.png">
+  <meta property="og:image:width" content="240">
+  <meta property="og:image:height" content="371">
+  <meta property="og:image:alt" content="A Journey from Duality to Oneness">
+
+  <!-- Global assets -->
+  <link rel="stylesheet" href="/reflections/assets/reflections.css?v=12">
+  <script src="/reflections/assets/audio-system.js?v=12"></script>
+  <link rel="manifest" href="/reflections/manifest.json?v=2">
+  <link rel="apple-touch-icon" href="/reflections/icon-180.png">
+  <meta name="theme-color" content="#ff6b3d">
 
   <style>
     /* ===== Theme ===== */
