--- a/reflections/pages/the-god-we-created/read.html
+++ b/reflections/pages/the-god-we-created/read.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+   <!-- ========== META & HEAD ========== -->
+   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>The God We Created </title>
-  <meta name="description" content="A reflection by Ninox Antolihao exploring how humanity shapes its vision of God.">
+  <title>The God We Created</title>
+   <meta name="description" content="A reflection by Ninox Antolihao exploring how humanity shapes its vision of God.">
   <meta property="og:title" content="The God We Created ">
   <meta property="og:description" content="A reflection that challenges the idea of a human-shaped God and invites the reader toward inner awakening.">
   <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-god-we-created/thegodwecreate.png">
   <link rel="icon" href="/reflections/assets/favicon.ico">
+
+  <!-- Social preview (keep as-is) -->
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/assets/logo.png">
+  <meta property="og:image:width" content="240">
+  <meta property="og:image:height" content="371">
+  <meta property="og:image:alt" content="A Journey from Duality to Oneness">
+
+  <!-- Global assets -->
+  <link rel="stylesheet" href="/reflections/assets/reflections.css?v=12">
+  <script src="/reflections/assets/audio-system.js?v=12"></script>
+  <link rel="manifest" href="/reflections/manifest.json?v=2">
+  <link rel="apple-touch-icon" href="/reflections/icon-180.png">
+  <meta name="theme-color" content="#ff6b3d">
+  
   <!-- 🔗 Omnibus player + stylesheet -->
   <link rel="stylesheet" href="/reflections/assets/reflections.css">
   <script src="/reflections/assets/audio-system.js"></script>
