--- a/reflections/index.html
+++ b/reflections/index.html
@@ -214,6 +214,9 @@
                data-share-url="https://stonegrillresto.net/reflections/pages/initial-premise/initial-premise-read.html"
                data-share-title="DIVINE PREMISE — Ninox Antolihao"></div>
         </div>
+         <script>
+            document.write(createAudioPlayer('/reflections/pages/initial-premise/initial-premise.mp3', 'Divine Premise'));
+          </script>
       </article>
 
       <!-- =========================================
