--- a/reflections/pages/the-madness-of-fath/read.html
+++ b/reflections/pages/the-madness-of-fath/read.html
@@ -10,7 +10,7 @@
 
   <meta property="og:title" content="The Madness of Faith — Ninox Antolihao">
   <meta property="og:description" content="Let faith never destroy. Let it guide.">
-  <meta property="og:image" content="logo.PNG">
+  <meta property="og:image" content="cover.png">
 
   <style>
     body { margin:0; padding:0; background:#1f1815; color:#f3e6dd; }
