--- a/reflections/pages/the-god-we-created/read.html
+++ b/reflections/pages/the-god-we-created/read.html
@@ -109,7 +109,7 @@
 
  <!-- 🎧 Audio Player (same folder) -->
   <script>
-    document.write(createAudioPlayer('the-god-we-create.mp3', 'The God we Create — Audio'));
+    document.write(createAudioPlayer('the-gods-we-create.mp3', 'The God we Create — Audio'));
   </script>
 
     <h2>About the Author</h2>
