--- a/reflections/index.html
+++ b/reflections/index.html
@@ -54,12 +54,17 @@
           <h3><a class="title-link" href="/reflections/pages/diety/read.html" target="_blank" rel="noopener">the diety</a></h3>
           <p>What if the god who made this world — with its wars, cancers, and cruelty — isn’t the ultimate source of love</p>
           <p class="meta">First Edition 2025 • <a class="title-link" href="/reflections/pages/diety/The_False_God_Reflection_by_Ninox copy.pdf" target="_blank" rel="noopener">PDF</a></p>
+        <section class="audio-wrap" id="audioMount-diety">
+            <p class="label">🎧 Audio Reflection: <strong>The Diety</strong></p>
+            <audio controls preload="auto" style="width:100%">
+              <source src="/reflections/pages/diety/diety.mp3" type="audio/mpeg">
+              Your browser does not support the audio element.
+            </audio>
+        </section>
+          
           <div class="share-group"
                data-share-url="https://stonegrillresto.net/reflections/pages/diety/read.html"
                data-share-title="the diety — Ninox Antolihao"></div>
-          <script>
-            document.write(createAudioPlayer('/reflections/pages/diety/diety.mp3', 'Diety'));
-          </script>
         </div>
       </article>
 
