--- a/reflections/pages/the-god-we-created/read.html
+++ b/reflections/pages/the-god-we-created/read.html
@@ -188,5 +188,12 @@ document.addEventListener('DOMContentLoaded', () => {
   }
 });
 </script>
+<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/reflections/sw.js')
+      .then(reg => console.log("SW registered"))
+      .catch(err => console.log("SW failed:", err));
+  }
+</script>
 </body>
 </html>
