--- a/reflections/pages/initial-premise/initial-premise-read.html
+++ b/reflections/pages/initial-premise/initial-premise-read.html
@@ -143,5 +143,12 @@
       }
     });
   </script>
+  <script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/reflections/sw.js')
+      .then(reg => console.log("SW registered"))
+      .catch(err => console.log("SW failed:", err));
+  }
+</script>
 </body>
 </html>
