Create read.html for 'The Paradox of God' article

--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -1,1 +1,218 @@
-read paradox of god
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <!-- ========== META & HEAD ========== -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+
+  <title>The Paradox of God — Ninox Antolihao</title>
+  <meta name="description" content="A reflection by Ninox Antolihao exploring the paradox of a perfect, loving God revealed through human-shaped beliefs, scriptures, and stories.">
+
+  <meta property="og:title" content="The Paradox of God — Ninox Antolihao">
+  <meta property="og:description" content="A reflection that wrestles with the tension between an infinite Source and the finite images of God we create.">
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod.png">
+  <meta property="og:image:alt" content="The Paradox of God — Ninox Antolihao">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
+
+  <link rel="icon" href="/reflections/assets/favicon.ico">
+
+  <!-- Social preview (keep as-is style) -->
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/assets/logo.png">
+  <meta property="og:image:width" content="240">
+  <meta property="og:image:height" content="371">
+  <meta property="og:image:alt" content="A Journey from Duality to Oneness">
+
+  <!-- Global assets -->
+  <link rel="stylesheet" href="/reflections/assets/reflections.css?v=12">
+  <script src="/reflections/assets/audio-system.js?v=12"></script>
+  <link rel="manifest" href="/reflections/manifest.json?v=2">
+  <link rel="apple-touch-icon" href="/reflections/icon-180.png">
+  <meta name="theme-color" content="#ff6b3d">
+
+  <!-- 🔗 Omnibus player hook (audio-system already loaded above) -->
+
+  <style>
+    body {
+      background: #1f1815;
+      color: #f3e6dd;
+      font-family: "Georgia", "Times New Roman", serif;
+      line-height: 1.75;
+      margin: 0;
+      padding: 0;
+    }
+    main {
+      max-width: 780px;
+      margin: 60px auto;
+      padding: 0 20px 80px;
+    }
+    header {
+      text-align: center;
+      margin-bottom: 50px;
+    }
+    header img {
+      width: 100px;
+      opacity: 0.9;
+    }
+    h1 {
+      font-size: 2em;
+      color: #ff7a00;
+      letter-spacing: 0.5px;
+      margin: 20px 0 5px;
+    }
+    .meta {
+      color: #c9b0a4;
+      font-style: italic;
+      font-size: 0.95em;
+    }
+    h2 {
+      color: #ffb36b;
+      margin-top: 50px;
+      font-size: 1.25em;
+      letter-spacing: 0.5px;
+    }
+    p {
+      text-align: justify;
+      margin: 1.1em 0;
+    }
+    .divider {
+      text-align: center;
+      color: #ff7a00;
+      margin: 2.5em 0;
+    }
+    footer {
+      text-align: center;
+      font-size: 0.85em;
+      color: #c9b0a4;
+      margin-top: 50px;
+    }
+    a.back {
+      display: inline-block;
+      background: #ff7a00;
+      color: white;
+      text-decoration: none;
+      padding: 10px 20px;
+      border-radius: 4px;
+      font-weight: bold;
+      margin-bottom: 40px;
+    }
+    a.back:hover { background: #ff8f26; }
+  </style>
+</head>
+
+<body>
+  <main>
+    <!-- ========== HEADER ========== -->
+    <header>
+      <img src="11EFF0F0-7760-4F66-9581-D2B1F2DD522E.png" alt="Stone Grill Logo">
+      <h1>The Paradox of God</h1>
+      <p class="meta">By Ninox Antolihao • First Edition — 2025</p>
+    </header>
+
+    <!-- Primary back button -->
+    <a href="/reflections/index.html" class="back">← Back to Reflections</a>
+
+    <!-- 🎧 Audio Player (same folder) -->
+    <script>
+      document.write(
+        createAudioPlayer(
+          'the-paradox-of-god.mp3',
+          'The Paradox of God — Audio'
+        )
+      );
+    </script>
+
+    <!-- ========== CONTENT ========== -->
+
+    <h2>About the Author</h2>
+    <p>Ninox Antolihao is a seeker of truth, a writer of questions, and a student of the unseen. Rooted in both community life and contemplative solitude, he writes to explore the gaps between faith and fact, spirit and story, myth and meaning. His reflections are not written to teach—but to open doors. Each one invites the reader to look again, and to listen more closely. In a world clouded by noise, Ninox writes to rediscover clarity.</p>
+
+    <h2>Introduction</h2>
+    <p>There comes a point when belief alone no longer satisfies the soul—when the answers we were given as children fracture under the weight of adult experience. We are told God is all-loving, yet we witness suffering that has no explanation. We are told God is all-powerful, yet injustice lingers in plain sight. Somewhere between these statements, a quiet fracture appears. That crack is where this reflection begins.</p>
+    <p>This is not a rejection of God. It is an honest encounter with the paradox of God—the tension between an infinite, unknowable Source and the very human images we have wrapped around it. We were handed a God who looks and feels suspiciously like us: angry when disobeyed, pleased when praised, partial to our tribe over another. Yet something in us senses a wider truth, one that no religion, no scripture, no doctrine has ever fully captured. As you read, I invite you not to defend or attack, but to observe. Let the paradox stretch you instead of resolve you. Let it whisper that mystery is not a problem to solve, but a depth to inhabit.</p>
+
+    <h2>The Paradox of God</h2>
+    <p>For centuries, we were told that we are the center of creation. That all things—earth, sky, stars—were made for us. That we are God’s masterpiece. His image. His prize.</p>
+    <p>But the stars tell a different story. The galaxies, the billions of suns and swirling dust clouds far beyond our reach, stretch into a space we may never touch. Not in this lifetime. Not in a thousand. And so we ask: If this universe is so vast, so unreachable—was it truly made for us?</p>
+    <p>And if it wasn’t… then why does the God we were taught act so human? With human emotions. Human judgment. Human laws.</p>
+    <p>A God who gets jealous. A God who demands worship. A God who picks favorites. A God who punishes anyone who steps out of line, even if He already knew they would. Does this sound like the architect of galaxies—or the echo of ancient kings?</p>
+    <p>Here lies the paradox: we call God infinite, yet we describe Him in painfully finite terms. Perhaps we created God in our image—before He ever created us in His.</p>
+    <p>Maybe the God of fire and punishment, the God who needs praise to feel powerful, was not the eternal source at all—but a reflection of our own fears, projected into the heavens.</p>
+    <p>In the Gnostic texts, long hidden and later banned, there was a different story. One that said: this world, with its pain and hierarchy and cruelty, was created not by the highest God—but by a lesser being. A Demiurge. A pretender. A flawed craftsman who thought he was the only one.</p>
+    <p>And the true God? Silent. Still. Beyond form. Beyond name.</p>
+    <p>This version of divinity does not command. It does not demand obedience. It does not throw us into fire for choosing wrong. It simply calls—softly—through intuition, through light, through longing.</p>
+    <p>The God we were taught is obsessed with sin. But the true divine sees only forgetfulness. We are not evil. We are not broken. We are simply asleep.</p>
+    <p>And maybe that is what Jesus really came to say—not to start a religion, not to die as a blood offering—but to wake us from the illusion. To tear the veil and say: The kingdom of God is within you.</p>
+    <p>Not in temples. Not in laws. Not in fear. But in the silent knowing that you are not separate from the Source—you are made of it.</p>
+    <p>So we ask again: why is the God of the Bible so small in a universe so large? Why does He sound like us—angry, possessive, insecure—when the stars are silent and majestic and free?</p>
+    <p>The answer may be simple. The god of old religion is not the true God. He is a shadow, a stepping stone, a misinterpretation of divine mystery.</p>
+    <p>And if this disturbs you… let it. Let it shatter the cage. Let it burn down the image built by centuries of fear and control.</p>
+    <p>Because what waits on the other side is not chaos—but freedom. Not punishment—but presence.</p>
+    <p>The true God does not demand belief. The true God does not need saving. The true God does not send anyone to hell. The true God waits. Within.</p>
+    <p>In stillness. In wonder. In the part of you that is light.</p>
+    <p>And the day you stop searching outside and start listening within—will be the day you realize:</p>
+    <p>You were never separate. You were never condemned. You were never lost.</p>
+    <p>You simply forgot.</p>
+    <p>And now, you are remembering.</p>
+
+    <div class="divider">— ❖ —</div>
+
+    <p>The history of humanity is, in many ways, the history of its gods. From the animistic spirits dwelling in ancient forests to the singular, omnipotent deities of modern faiths, these figures have been the bedrock of our civilizations, the architects of our morals, and the ultimate answer to our deepest questions. Yet, the very notion of a universal, unchanging God is profoundly challenged by the breathtaking variety and historical malleability of our divine concepts. A close examination suggests a provocative and perhaps unsettling truth: the God we worship is less an external, eternal reality and more a magnificent, necessary, and continually evolving reflection of ourselves—the God we created.</p>
+
+    <p>The evidence for this creation lies in the striking correspondence between the divine and the dominant societal structure of the time. The gods of the Greeks, with their jealousies, feuds, and dramatic power struggles, perfectly mirrored the turbulent political landscape of city-states and warring human factions. Their polytheism was a celestial aristocracy, echoing the terrestrial one. The subsequent rise of monotheism, particularly the Abrahamic faiths, coincided with the establishment of large, centralized empires. A singular, absolute emperor on Earth found his perfect theological justification in a singular, absolute Monarch of the Universe. This God became the ultimate patriarchal figure—a distant, judgmental, yet loving father—a structure that powerfully reinforced the hierarchical, male-dominated societies that institutionalized these religions. We didn't just look up at the heavens; we cast our political and familial frameworks onto them.</p>
+
+    <p>Furthermore, the attributes we ascribe to the divine are not timeless pronouncements but ethical updates that track our own moral progression. The God who commanded genocides and endorsed slavery in ancient texts is scarcely recognizable in the God of modern liberal theology, who is characterized almost entirely by unconditional love, tolerance, and justice for the oppressed. This transformation did not occur because a divine being sent a new memo; it occurred because humanity went through the Renaissance, the Enlightenment, and the civil rights movements. As our collective conscience expanded to reject brutality and demand equality, we simultaneously re-edited the character of our divinity to be more compassionate, more inclusive, and more aligned with our newfound moral sophistication. The contemporary emphasis on a "spiritual, not religious" God—a personal, therapeutic, non-judgmental entity—is the perfect deity for a hyper-individualized, post-modern society that values personal authenticity above all else.</p>
+
+    <p>This realization is not meant to be a nihilistic dismissal of faith, but rather a profound call to humility and responsibility. If God is our greatest creation, a repository for our highest ideals, then its power lies precisely in its function as an ultimate mirror. When we say that God is just, we are not just describing an external entity; we are making an aspirational decree about the kind of justice we must enact on Earth. The “God we created” is the ultimate ethical project. It allows us to externalize our moral compass, giving it an authority that transcends personal whim, yet remains flexible enough to adapt to our growth.</p>
+
+    <p>In the end, the most important question is not whether God created man, but what kind of God man chooses to create. The God of fire and vengeance is as much a human invention as the God of radical forgiveness and peace. By recognizing the divine as a lens through which we view and judge our own best and worst natures, we regain the agency to shape our moral universe. The God we create is the ultimate blueprint for the society we seek to build, and its continuing evolution is a testament to the unending, and perhaps divine, potential of the human spirit.</p>
+
+    <p><strong>Do you think recognizing that our concept of God has evolved helps or hinders interfaith dialogue?</strong></p>
+
+    <!-- ========== FOOTER ========== -->
+    <footer>
+      <p>© 2025 Ninox Antolihao · First Edition — Stone Grill Press · Leyte, Philippines</p>
+    </footer>
+  </main>
+
+  <!-- Secondary back link (layout preserved) -->
+  <div class="wrap" style="display:flex; text-align:left;">
+    <a class="back" href="/reflections/index.html" style="color:var(--accent); text-decoration:none; font-weight:700">← Back to Reflections</a>
+  </div>
+
+  <!-- ========== AUTOPLAY / BACK BRIDGE ========== -->
+  <script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const audio = document.querySelector('audio');
+    const p = new URLSearchParams(location.search);
+    const fromIndex = p.get('autoplay') === '1' || sessionStorage.getItem('autoplayAudio') === 'true';
+
+    if (fromIndex && audio) {
+      audio.play().catch(() => {
+        console.log('Autoplay blocked; user must press play.');
+      });
+      sessionStorage.removeItem('autoplayAudio');
+    }
+
+    // Optional: show Back button if user came from index
+    if (p.get('back') === '1' || sessionStorage.getItem('showBack') === 'true') {
+      const back = document.createElement('a');
+      back.href = '/reflections/index.html';
+      back.className = 'btn ghost';
+      back.textContent = '← Back to Reflections';
+      (document.querySelector('header') || document.body).prepend(back);
+      sessionStorage.removeItem('showBack');
+    }
+  });
+  </script>
+
+  <!-- ========== SERVICE WORKER ========== -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/reflections/sw.js')
+        .then(reg => console.log("SW registered"))
+        .catch(err => console.log("SW failed:", err));
+    }
+  </script>
+</body>
+</html>
