Add card for 'The Paradox of God' reflection

--- a/reflections/index.html
+++ b/reflections/index.html
@@ -98,6 +98,36 @@
         </div>
       </article>
 
+    <!-- =========================================
+           2) CARD: The PARADOX OF GOD
+           ========================================= -->
+      <article class="card">
+        <div class="left">
+          <a class="book-link" href="/reflections/pages/the-paradox-of-god/read.html" target="_blank" rel="noopener">
+            <img class="book-cover"
+                 src="/reflections/pages/the-god-we-created/thegodwecreated.png"
+                 alt="The God We Created cover"
+                 onerror="this.src='/reflections/assets/placeholder.jpg'">
+          </a>
+        </div>
+        <div class="right">
+          <h3><a class="title-link" href="/reflections/pages/the-paradox-of-god/read.html" target="_blank" rel="noopener">The God We Created</a></h3>
+          <p>Do you think recognizing that our concept of God has evolved helps or hinders interfaith dialogue?</p>
+          <p class="meta">First Edition 2025 • <a class="title-link" href="/reflections/pages/the-paradox-of-god/The_God_We_created.pdf" target="_blank" rel="noopener">PDF</a></p>
+      <section class="audio-wrap" id="audioMount-we created God">
+            <p class="label">🎧 Audio Reflection: <strong>The Paradox of God</strong></p>
+            <audio controls preload="auto" style="width:100%">
+              <source src="/reflections/pages/the-paradox-of-god/paradox-of-god.mp3" type="audio/mpeg">
+              Your browser does not support the audio element.
+            </audio>
+    </section>
+          
+          <div class="share-group"
+               data-share-url="https://stonegrillresto.net/reflections/pages/the-paradoz-of-god/read.html"
+               data-share-title="The God We Created — Ninox Antolihao"></div>
+        </div>
+      </article>
+      
       <!-- =========================================
            3) CARD: TRANSCENDENCE
            ========================================= -->
