Fix image and text for 'The Paradox of God'

--- a/reflections/index.html
+++ b/reflections/index.html
@@ -105,16 +105,16 @@
         <div class="left">
           <a class="book-link" href="/reflections/pages/the-paradox-of-god/read.html" target="_blank" rel="noopener">
             <img class="book-cover"
-                 src="/reflections/pages/the-god-we-created/paradoxofgod.png"
-                 alt="The God We Created cover"
+                 src="/reflections/pages/the-god-we-created/paradoxofgod.PNG"
+                 alt="The Paradox if God cover"
                  onerror="this.src='/reflections/assets/placeholder.jpg'">
           </a>
         </div>
         <div class="right">
-          <h3><a class="title-link" href="/reflections/pages/the-paradox-of-god/read.html" target="_blank" rel="noopener">The God We Created</a></h3>
-          <p>Do you think recognizing that our concept of God has evolved helps or hinders interfaith dialogue?</p>
+          <h3><a class="title-link" href="/reflections/pages/the-paradox-of-god/read.html" target="_blank" rel="noopener">The God Pqradox of God</a></h3>
+          <p>to those who seek truth, even when silence is the only answer.</p>
           <p class="meta">First Edition 2025 • <a class="title-link" href="/reflections/pages/the-paradox-of-god/The_Paradox_of_God.pdf" target="_blank" rel="noopener">PDF</a></p>
-      <section class="audio-wrap" id="audioMount-we created God">
+      <section class="audio-wrap" id="audioMount-paradox of god">
             <p class="label">🎧 Audio Reflection: <strong>The Paradox of God</strong></p>
             <audio controls preload="auto" style="width:100%">
               <source src="/reflections/pages/the-paradox-of-god/paradoxofgod.mp3" type="audio/mpeg">
