--- a/reflections/index.html
+++ b/reflections/index.html
@@ -105,13 +105,13 @@
         <div class="left">
           <a class="book-link" href="/reflections/pages/the-paradox-of-god/read.html" target="_blank" rel="noopener">
             <img class="book-cover"
-                 src="/reflections/pages/the-god-we-created/paradoxofgod.PNG"
-                 alt="The Paradox if God cover"
+                 src="/reflections/pages/the-paradox-of-god/paradoxofgod.PNG"
+                 alt="The Paradox of God cover"
                  onerror="this.src='/reflections/assets/placeholder.jpg'">
           </a>
         </div>
         <div class="right">
-          <h3><a class="title-link" href="/reflections/pages/the-paradox-of-god/read.html" target="_blank" rel="noopener">The God Pqradox of God</a></h3>
+          <h3><a class="title-link" href="/reflections/pages/the-paradox-of-god/read.html" target="_blank" rel="noopener">The God Paradox of God</a></h3>
           <p>to those who seek truth, even when silence is the only answer.</p>
           <p class="meta">First Edition 2025 • <a class="title-link" href="/reflections/pages/the-paradox-of-god/The_Paradox_of_God.pdf" target="_blank" rel="noopener">PDF</a></p>
       <section class="audio-wrap" id="audioMount-paradox of god">
