Change book cover image format from PNG to JPG

--- a/reflections/index.html
+++ b/reflections/index.html
@@ -105,7 +105,7 @@
         <div class="left">
           <a class="book-link" href="/reflections/pages/the-paradox-of-god/read.html" target="_blank" rel="noopener">
             <img class="book-cover"
-                 src="/reflections/pages/the-paradox-of-god/paradoxofgod.PNG"
+                 src="/reflections/pages/the-paradox-of-god/paradoxofgod.jpg"
                  alt="The Paradox of God cover"
                  onerror="this.src='/reflections/assets/placeholder.jpg'">
           </a>
