--- a/reflections/index.html
+++ b/reflections/index.html
@@ -204,27 +204,27 @@
            ========================================= -->
       <article class="card">
         <div class="left">
-          <a class="book-link" href="/reflections/pages/lost-language-of-metaphor/read.html" target="_blank" rel="noopener">
+          <a class="book-link" href="/reflections/pages/the-lost-language-of-metaphor/read.html" target="_blank" rel="noopener">
             <img class="book-cover"
-                 src="/reflections/pages/lost-language-of-metaphor/lostlanguageofmetaphor.jpg"
+                 src="/reflections/pages/the-lost-language-of-metaphor/lostlanguageofmetaphor.jpg"
                  alt="The Paradox of God cover"
                  onerror="this.src='/reflections/assets/placeholder.jpg'">
           </a>
         </div>
         <div class="right">
-          <h3><a class="title-link" href="/reflections/pages/lost-language-of-metaphor/read.html" target="_blank" rel="noopener">The God Paradox of God</a></h3>
+          <h3><a class="title-link" href="/reflections/pages/the-lost-language-of-metaphor/read.html" target="_blank" rel="noopener">The Lost Language of Metaphor</a></h3>
           <p>to those who seek truth, even when silence is the only answer.</p>
           <p class="meta">First Edition 2025 • <a class="title-link" href="/reflections/pages/the-paradox-of-god/The_Paradox_of_God.pdf" target="_blank" rel="noopener">PDF</a></p>
       <section class="audio-wrap" id="audioMount-paradox of god">
             <p class="label">🎧 Audio Reflection: <strong>The Lost Labguage of Metaphor</strong></p>
             <audio controls preload="auto" style="width:100%">
-              <source src="/reflections/pages/lost-language-of-metaphor/lostlanguageofmetaphor.mp3" type="audio/mpeg">
+              <source src="/reflections/pages/the-lost-language-of-metaphor/lostlanguageofmetaphor.mp3" type="audio/mpeg">
               Your browser does not support the audio element.
             </audio>
     </section>
           
           <div class="share-group"
-               data-share-url="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html"
+               data-share-url="https://stonegrillresto.net/reflections/pages/the-lost-language-of-metaphor/read.html"
                data-share-title="The Paradox of God — Ninox Antolihao"></div>
         </div>
       </article>
