Fix typos in index.html for book details

--- a/reflections/index.html
+++ b/reflections/index.html
@@ -207,18 +207,19 @@
           <a class="book-link" href="/reflections/pages/the-lost-language-of-metaphor/read.html" target="_blank" rel="noopener">
             <img class="book-cover"
                  src="/reflections/pages/the-lost-language-of-metaphor/lostlanguageofmetaphor.jpg"
-                 alt="The Paradox of God cover"
+                 alt="The lost language of metaphor cover"
                  onerror="this.src='/reflections/assets/placeholder.jpg'">
           </a>
         </div>
         <div class="right">
           <h3><a class="title-link" href="/reflections/pages/the-lost-language-of-metaphor/read.html" target="_blank" rel="noopener">The Lost Language of Metaphor</a></h3>
-          <p>to those who seek truth, even when silence is the only answer.</p>
+          <p>What was meant to awaken the soul…
+began to bind it.</p>
           <p class="meta">First Edition 2025 • <a class="title-link" href="/reflections/pages/the-paradox-of-god/The_Paradox_of_God.pdf" target="_blank" rel="noopener">PDF</a></p>
       <section class="audio-wrap" id="audioMount-paradox of god">
-            <p class="label">🎧 Audio Reflection: <strong>The Lost Labguage of Metaphor</strong></p>
+            <p class="label">🎧 Audio Reflection: <strong>The Lost Language of Metaphor</strong></p>
             <audio controls preload="auto" style="width:100%">
-              <source src="/reflections/pages/the-lost-language-of-metaphor/lostlanguageofmetaphor.mp3" type="audio/mpeg">
+              <source src="/reflections/pages/the-lost-language-of-metaphor/lost-language-of-metaphor.mp3" type="audio/mpeg">
               Your browser does not support the audio element.
             </audio>
     </section>
